# Decision_Intelligence_Assistant

./: .dockerignore  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  config.py  main.py  pyproject.toml  requirements.txt  setup.py
backend/routers/: compare.py  llm.py  ml.py  rag.py  tickets.py
backend/schemas/: __init__.py  comparison.py  query.py  ticket (Copy).py  ticket.py
backend/utils/: embedding.py  groq_client.py  logger.py  ml_model.py  preprocess.py  weaviate_client.py
frontend/: Dockerfile  index.html  nginx.conf  vite.config.js
frontend/src/: App.jsx  config.js  index.css
frontend/src/components/: AccuracyChart.jsx  AnswerDisplay.jsx  ComparisonSection.jsx  LatencyCostChart.jsx  QueryInput.jsx  SourcePanel.jsx
notebooks/: exploratory_analysis.ipynb
scripts/: ingest_data.py
